@@ -4,6 +4,7 @@ TStar Changelog
 Version 1.6.4
 -------------
 - Update to the add/recombine luminance tool
+- Added a more robust algorithm for plate solving and color calibration
 - New small tool: align channels
 - Minor bugfixes
 
